# plan3y_v4

./: app.py  func_eo_job_catalague_prep.py  func_ktg_data_prep.py  func_maintanance_jobs_df_prepare.py  func_model_eo_select_data_prep.py  func_update_downtime_graph_data.py  func_update_ktg_graph_data.py  functions.py  initial_values.py  pyproject.toml
data/: eo_download_data_raw.csv  eo_job_catologue.csv  full_eo_list.csv  hour_df_temp_delete.csv  job_codes.csv  job_list.csv  last_maint_date.csv  maintanance_category.csv  maintanance_job_list_general.csv  maintanance_jobs_complete_df_delete.csv  maintanance_jobs_df.csv  maintanance_jobs_tr_df_delete.csv  man_hours_raw_data_2.csv  man_hours_raw_data_df.csv  result_df_delete.csv
widget_data/: downtime_graph_data.csv  eo_calculation_table.csv  eo_download_data.csv  filter_be.csv  filter_model_eo.csv  ktg_by_month_data_df.csv  ktg_graph_data.csv  ktg_table_data.csv  p11data.csv
