[tool.poetry]
name = "repl_python3_plan3yv4"
version = "0.1.0"
description = ""
authors = ["Zhenya1975 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
dash = "^2.3.0"
dash-bootstrap-components = "^1.0.3"
pandas = "^1.4.1"
plotly = "^5.6.0"
dash-bootstrap-templates = "^1.0.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
